# amhs-foup-digital-twin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
amhs_sim/: __init__.py  cli.py  controller.py  model.py  simulation.py  web.py
amhs_sim/web/: app.js  index.html  styles.css
docs/: system-architecture.md
tests/: test_simulation.py
